# pkgfind

./: .gitignore  index.html  package-lock.json  package.json
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
