[package]
name = "pkgfind"
version = "0.1.0"
description = "Fast package search for Arch Linux official repositories and the AUR."
authors = ["krynex0"]
license = "MIT"
repository = "https://github.com/krynex0/pkgfind"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pkgfind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
